# relic

./: .env.example  .gitignore  README.md  docker-compose-dokploy.yml  docker-compose.yml  git.txt  pyproject.toml
collectors/webapp/: Dockerfile  index.html  script.js  style.css
core/: config.py  main.py
core/ingress/: Dockerfile
core/ingress/src/: main.py
core/pipeline/: Dockerfile  main.py
core/stores/: __init__.py  graphiti.py  postgres.py  redis.py  sqlite.py
core/types/: base.py
devtools/: get_replay.py  init_db.py
devtools/mock/: sample_collectors.txt
docs/: concepts.md  relic_arch.excalidraw  todo.md
